[project]
name = "finalyearprodiss2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.0",
    "numpy",
    "pillow",
    "torch",
    "tqdm",
    "scikit-learn",
    "timm",
    "einops",
    "opencv-python",
    "matplotlib",
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
